Reconfigured using Mongoose Models
