# TaskManager/server.js
@@ -5,25 +5,29 @@ const port = process.env.PORT || 3030;
 const cors = require('cors');
 const swaggerUi = require('swagger-ui-express');
 const swaggerDocument = require('./swagger.json');
+const db = require('./models');
 
-try {
-    // Connect to MongoDB using the environment variable
-    mongoose.connect(process.env.MONGODB_URI, {
+app
+    .use(cors())
+    .use('/api-docs', swaggerUi.serve, swaggerUi.setup(swaggerDocument))
+    .use(bodyParser.json())
+    .use((req, res, next) => {
+        res.setHeader('Access-Control-Allow-Origin', '*');
+        next();
+      })
+    .use("/", require("./routes"));
+
+db.mongoose
+    .connect(db.url, {
         useNewUrlParser: true,
-        useUnifiedTopology: true,
-    });
-
-    console.log('Connected to MongoDB');
-} catch (error) {
-    console.error('Error connecting to MongoDB:', error);
-}
-
-app.use(cors());
-app.use('/api-docs', swaggerUi.serve, swaggerUi.setup(require(swaggerDocument)));
-app.use(bodyParser.json());
-app.use("/", require("./routes"));
-
-
-app.listen(port, () => {
-    console.log(`Server is running on port ${port}`);
-});
+        useUnifiedTopology: true
+    })
+    .then(() => {
+        app.listen(port, () => {
+        console.log(`DB connected and Server is running on port ${port}`);
+        });
+    })
+    .catch((err) => {
+        console.log('Cannot connect to database.', err);
+        process.exit();
+    })
